[package]
name = "ciska"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
processor = { path = "./processor" }
prose-parser = { path = "./prose-parser" }
book-exporter = { path = "./book-exporter" }

[workspace]
members = [
  "processor",
  "prose-parser",
  "book-exporter"
]
