[package]
name = "ciska"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
processor = { path = "./packages/processor" }
prose-parser = { path = "./packages/prose-parser" }
book-exporter = { path = "./packages/book-exporter" }

[workspace]
members = [
  "packages/processor",
  "packages/prose-parser",
  "packages/book-exporter",
  "packages/causal-relation-graphs"
]
